just hi to hello and experience year changed

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <!-- START HERO DESIGN AREA -->
                                 <div class="hero-content wow fadeInUp delay-0-2s">
                                     <h1>I am a Passionate Graphic designer</h1>
-                                    <h2>Hi, i'm Hamna Iqbal i'm a freelance Graphic designer with 4+ years of experience focusing on social media post designs. </h2>
+                                    <h2>Hello, i'm Hamna Iqbal i'm a freelance Graphic designer with 2+ years of experience focusing on social media post designs. </h2>
                                     <div class="hero-btns">
                                         <a href="assets/resume/Resume.pdf" download class="theme-btn">Download CV <i class="ri-download-line"></i></a>
                                     </div>
@@ -374,5 +374,4 @@
 </body>
 
 
-<!-- Mirrored from wordpressboss.com/cp/wize-demo/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 29 Dec 2024 11:21:03 GMT -->
 </html>
