text changes and documentation update

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                             <div class="col-lg-8">
                                 <!-- START HERO DESIGN AREA -->
                                 <div class="hero-content wow fadeInUp delay-0-2s">
-                                    <h1>I am a Passionate Graphic designer</h1>
-                                    <h2>Hello, i'm Hamna Iqbal i'm a freelance Graphic designer with 2+ years of experience focusing on social media post designs. </h2>
+                                    <h1>Hello, i'm Hamna Iqbal</h1>
+                                    <h2>I am a Passionate Freelance Graphic Designer with 2+ years of experience focusing on social media post designs. </h2>
                                     <div class="hero-btns">
                                         <a href="assets/resume/Resume.pdf" download class="theme-btn">Download CV <i class="ri-download-line"></i></a>
                                     </div>
